# evetrade_historical_volume

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  app.py  ingest.py  market_data.py  prod.sql  pyproject.toml  requirements.txt
.github/workflows/: Impute-volume.yml  historical-market-data.yml  historical-volume-ingest.yml  impute-historic-volume.yml  precommit-hooks.yml
