[tool.poetry]
name = "evetrade-historic-volume"
version = "0.1.0"
description = "Imputes the historical trading volume for the EVE Online Universe"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "evetrade_historic_volume"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
boto3 = "^1.26.21"
aiohttp = "^3.8.3"
asyncio = "^3.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
